<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TrafficAdvisorFragment"
    android:orientation="vertical"
    android:weightSum="5"
    android:paddingStart="10dp">

    <!-- encompasses light status icons and car diagram -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4">

        <!-- icons on left of car diagram -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/legal_status_imageview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/handcuff_icon"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/horn_status_imageview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/horn_icon"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/siren_status_imageview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/siren_icon"
                android:layout_margin="20dp"/>

        </LinearLayout>

        <!-- TODO: build car diagram here -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- vehicle itself -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="5">

                <!-- switches to left of vehicle -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2.75">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/front_hazard_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/side_hazard_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/rear_hazard_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                </LinearLayout>

                <!-- vehicle -->
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/car_outline"/>

                    <!-- colour overlay -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <!-- yellow overlay -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <ImageView
                                android:id="@+id/front_hazard_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#80FFFF00"/>

                            <ImageView
                                android:id="@+id/side_hazard_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#80FFFF00"/>

                            <ImageView
                                android:id="@+id/rear_hazard_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#80FFFF00"/>

                        </LinearLayout>

                        <!-- blue overlay -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <ImageView
                                android:id="@+id/front_police_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#800000FF"/>

                            <ImageView
                                android:id="@+id/side_police_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#800000FF"/>

                            <ImageView
                                android:id="@+id/rear_police_highlight"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:src="#800000FF"/>

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

                <!-- switches to right of vehicle -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2.75">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/front_police_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/side_police_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/rear_police_switch"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:rotation="270"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- icons below vehicle -->

    <!-- 2x2 table containing brief descriptions of all countermeasure states -->
    <!-- padding is awkward here since bottom and right side of container already contains padding technically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/fast_hazard_cycle_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:text="@string/fast_hazard_title"
                    android:background="@drawable/rounded_background"/>

                <ImageView
                    android:id="@+id/fast_hazard_cycle_highlight_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/highlight_outline"
                    android:visibility="invisible"/>

            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/slow_hazard_cycle_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:text="@string/slow_hazard_title"
                    android:background="@drawable/rounded_background"/>

                <ImageView
                    android:id="@+id/slow_hazard_cycle_highlight_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/highlight_outline"
                    android:visibility="invisible"/>

            </FrameLayout>

        </LinearLayout>

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/fast_police_cycle_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:text="@string/fast_police_title"
                    android:background="@drawable/rounded_background"/>

                <ImageView
                    android:id="@+id/fast_police_cycle_highlight_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/highlight_outline"
                    android:visibility="invisible"/>

            </FrameLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/slow_police_cycle_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:text="@string/slow_police_title"
                    android:background="@drawable/rounded_background"/>

                <ImageView
                    android:id="@+id/slow_police_cycle_highlight_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/highlight_outline"
                    android:visibility="invisible"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>